Added Hive annotations option for dart models

--- a/modules/openapi-generator/src/main/resources/dart2/api_client.mustache
+++ b/modules/openapi-generator/src/main/resources/dart2/api_client.mustache
@@ -1,7 +1,17 @@
 {{>header}}
 {{>part_of}}
 class ApiClient {
-  ApiClient({this.basePath = '{{{basePath}}}', this.authentication,});
+  static bool _runOnce = false;
+
+  ApiClient({this.basePath = '{{{basePath}}}', this.authentication,}) {
+    if (!_runOnce) {
+        _runOnce = true;
+
+        {{#models}}{{#model}}{{#isLocalStorage}}Hive.registerAdapter({{{classname}}}Adapter());
+        {{#vars}}{{#isEnum}}Hive.registerAdapter({{{enumName}}}Adapter());
+        {{/isEnum}}{{/vars}}{{/isLocalStorage}}{{/model}}{{/models}}
+    }
+  }
 
   final String basePath;
   final Authentication? authentication;
@@ -188,17 +198,17 @@ class ApiClient {
         {{/models}}
         default:
           dynamic match;
-          if (value is List && (match = _regList.firstMatch(targetType)?.group(1)) != null) {
+          if (value is List && (match = regList.firstMatch(targetType)?.group(1)) != null) {
             return value
               .map<dynamic>((dynamic v) => fromJson(v, match, growable: growable,))
               .toList(growable: growable);
           }
-          if (value is Set && (match = _regSet.firstMatch(targetType)?.group(1)) != null) {
+          if (value is Set && (match = regSet.firstMatch(targetType)?.group(1)) != null) {
             return value
               .map<dynamic>((dynamic v) => fromJson(v, match, growable: growable,))
               .toSet();
           }
-          if (value is Map && (match = _regMap.firstMatch(targetType)?.group(1)) != null) {
+          if (value is Map && (match = regMap.firstMatch(targetType)?.group(1)) != null) {
             return Map<String, dynamic>.fromIterables(
               value.keys.cast<String>(),
               value.values.map<dynamic>((dynamic v) => fromJson(v, match, growable: growable,)),
