--- a/modules/openapi-generator/src/main/resources/dart2/pubspec.mustache
+++ b/modules/openapi-generator/src/main/resources/dart2/pubspec.mustache
@@ -13,15 +13,14 @@ repository: {{.}}
 publish_to: {{.}}
 {{/pubPublishTo}}
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.17.0 <3.0.0'
 dependencies:
   collection: '^1.17.0'
   http: '>=0.13.0 <0.14.0'
   intl: '^0.18.0'
   meta: '^1.1.8'
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 dev_dependencies:
-  test: '>=1.16.0 <1.18.0'
-{{#json_serializable}}
-  build_runner: '^1.10.9'
-  json_serializable: '^3.5.1'
-{{/json_serializable}}
+  build_runner: ^2.4.8
+  hive_generator: ^1.1.3
