Added nullable required fields to dart generator

--- a/modules/openapi-generator/src/main/resources/dart2/serialization/native/native_class.mustache
+++ b/modules/openapi-generator/src/main/resources/dart2/serialization/native/native_class.mustache
@@ -128,9 +128,9 @@ class {{{classname}}} {
       // Note 1: the values aren't checked for validity beyond being non-null.
       // Note 2: this code is stripped in release mode!
       assert(() {
-        requiredKeys.forEach((key) {
+        requiredKeys.forEach((key, nullable) {
           assert(json.containsKey(key), 'Required key "{{{classname}}}[$key]" is missing from JSON.');
-          assert(json[key] != null, 'Required key "{{{classname}}}[$key]" has a null value in JSON.');
+          assert(!nullable && json[key] != null, 'Required non-nullable key "{{{classname}}}[$key]" has a null value in JSON.');
         });
         return true;
       }());
@@ -285,10 +285,10 @@ class {{{classname}}} {
   }
 
   /// The list of required keys that must be present in a JSON.
-  static const requiredKeys = <String>{
+  static const requiredKeys = <String, bool>{
 {{#vars}}
   {{#required}}
-    '{{{baseName}}}',
+    '{{{baseName}}}': {{#isNullable}}true{{/isNullable}}{{^isNullable}}false{{/isNullable}},
   {{/required}}
 {{/vars}}
   };
