Added equals check to dart enum

--- a/modules/openapi-generator/src/main/resources/dart2/serialization/native/native_enum.mustache
+++ b/modules/openapi-generator/src/main/resources/dart2/serialization/native/native_enum.mustache
@@ -50,6 +50,9 @@ class {{{classname}}} {
     }
     return result.toList(growable: growable);
   }
+
+  @override
+  bool operator ==(Object other) => identical(this, other) || other is {{{classname}}} && value == other.value;
 }
 
 /// Transformation class that can [encode] an instance of [{{{classname}}}] to {{{dataType}}},
