Fixed missing == operator override in inline enums

--- a/modules/openapi-generator/src/main/resources/dart2/serialization/native/native_enum_inline.mustache
+++ b/modules/openapi-generator/src/main/resources/dart2/serialization/native/native_enum_inline.mustache
@@ -46,6 +46,9 @@ class {{{enumName}}} {
     }
     return result.toList(growable: growable);
   }
+
+  @override
+  bool operator ==(Object other) => identical(this, other) || other is {{{classname}}} && value == other.value;
 }
 
 /// Transformation class that can [encode] an instance of [{{{enumName}}}] to {{{dataType}}},
