Fixed using classname instead of correct enumname

--- a/modules/openapi-generator/src/main/resources/dart2/serialization/native/native_enum_inline.mustache
+++ b/modules/openapi-generator/src/main/resources/dart2/serialization/native/native_enum_inline.mustache
@@ -48,7 +48,7 @@ class {{{enumName}}} {
   }
 
   @override
-  bool operator ==(Object other) => identical(this, other) || other is {{{classname}}} && value == other.value;
+  bool operator ==(Object other) => identical(this, other) || other is {{{enumName}}} && value == other.value;
 }
 
 /// Transformation class that can [encode] an instance of [{{{enumName}}}] to {{{dataType}}},
