Fixed enum toJson not working on non-string values

--- a/modules/openapi-generator/src/main/resources/dart2/serialization/native/native_enum.mustache
+++ b/modules/openapi-generator/src/main/resources/dart2/serialization/native/native_enum.mustache
@@ -36,7 +36,7 @@ class {{{classname}}} {
   {{/allowableValues}}
   ];
 
-  static {{{classname}}}? fromJson(dynamic value) => {{{classname}}}TypeTransformer().decode(value);
+  static {{{classname}}}? fromJson(dynamic value) => {{{classname}}}TypeTransformer().decode(value.toString());
 
   static List<{{{classname}}}> listFromJson(dynamic json, {bool growable = false,}) {
     final result = <{{{classname}}}>[];
