--- a/modules/openapi-generator/src/main/resources/dart2/serialization/native/native_enum_inline.mustache
+++ b/modules/openapi-generator/src/main/resources/dart2/serialization/native/native_enum_inline.mustache
@@ -32,7 +32,7 @@ class {{{enumName}}} {
   {{/allowableValues}}
   ];
 
-  static {{{enumName}}}? fromJson(dynamic value) => {{{enumName}}}TypeTransformer().decode(value);
+  static {{{enumName}}}? fromJson(dynamic value) => {{{enumName}}}TypeTransformer().decode(value.toString());
 
   static List<{{{enumName}}}> listFromJson(dynamic json, {bool growable = false,}) {
     final result = <{{{enumName}}}>[];
